# project-group29

./: .buildinfo  Data Cleaning Feature Engineering.html  Data Cleaning Feature Engineering.ipynb  Data Collection.html  Data Collection.ipynb  LICENSE  Makefile  Makefile.txt  README.html  README.md  _config.yml  _toc.yml  conf.py  environment.yml  genindex.html  main.html  main.ipynb  objects.inv  prediction model.ipynb  requirements.txt  search.html  setup.cfg
.doctrees/: Data Collection.doctree  README.doctree  environment.pickle  main.doctree  prediction model.doctree  project-description.doctree
.doctrees/.pytest_cache/: README.doctree
.doctrees/tools/.pytest_cache/: README.doctree
.pytest_cache/: README.html
_build/.doctrees/: README.doctree  environment.pickle  prediction model.doctree  project-description.doctree
_build/html/: .buildinfo  README.html  genindex.html  prediction model.html  project-description.html  search.html  searchindex.js
_build/html/.doctrees/: Data Cleaning Feature Engineering.doctree  Data Collection.doctree  environment.pickle
_build/html/_sources/: Data Cleaning Feature Engineering.ipynb  README.md  main.ipynb
_build/html/project/: intro.html  markdown-notebooks.html  markdown.html
_build/jupyter_execute/: Data Cleaning Feature Engineering.ipynb  Data Collection.ipynb  main.ipynb  prediction model.ipynb
_sources/: README.md
data/: games.csv  games_model.csv
project/: notebooks.html
tools/: __.init__.py  utils.py
tools/.pytest_cache/: README.html
tools/tests/: test_utils.py
(+5 files in other folders)
